# newgrok

./: .env.example  .gitignore  README.md  pyproject.toml
newgrok/: __init__.py  newgrok.py
newgrok/cli/: chat.py
newgrok/modules/process_manager/: manager.py
newgrok/modules/telegram/: bot.py
